// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Counter Snapshot 1`] = `
<DocumentFragment>
  <span
    class="SxCounter SxCounter_type_filled SxCounter_size_large SxCounter_color_brand css-14y727w-SxCounter-root"
  >
    99
  </span>
</DocumentFragment>
`;

exports[`Counter color brand 1`] = `
<DocumentFragment>
  <span
    class="SxCounter SxCounter_type_filled SxCounter_size_large SxCounter_color_brand css-14y727w-SxCounter-root"
    data-testid="testStyleParams-color-brand"
  >
    99
  </span>
</DocumentFragment>
`;

exports[`Counter color danger 1`] = `
<DocumentFragment>
  <span
    class="SxCounter SxCounter_type_filled SxCounter_size_large SxCounter_color_danger css-1op0iw-SxCounter-root"
    data-testid="testStyleParams-color-danger"
  >
    99
  </span>
</DocumentFragment>
`;

exports[`Counter color info 1`] = `
<DocumentFragment>
  <span
    class="SxCounter SxCounter_type_filled SxCounter_size_large SxCounter_color_info css-g8ttil-SxCounter-root"
    data-testid="testStyleParams-color-info"
  >
    99
  </span>
</DocumentFragment>
`;

exports[`Counter color secondary 1`] = `
<DocumentFragment>
  <span
    class="SxCounter SxCounter_type_filled SxCounter_size_large SxCounter_color_secondary css-kg5qyf-SxCounter-root"
    data-testid="testStyleParams-color-secondary"
  >
    99
  </span>
</DocumentFragment>
`;

exports[`Counter color success 1`] = `
<DocumentFragment>
  <span
    class="SxCounter SxCounter_type_filled SxCounter_size_large SxCounter_color_success css-1ohbl6v-SxCounter-root"
    data-testid="testStyleParams-color-success"
  >
    99
  </span>
</DocumentFragment>
`;

exports[`Counter color text 1`] = `
<DocumentFragment>
  <span
    class="SxCounter SxCounter_type_filled SxCounter_size_large SxCounter_color_text css-29q5lz-SxCounter-root"
    data-testid="testStyleParams-color-text"
  >
    99
  </span>
</DocumentFragment>
`;

exports[`Counter color warning 1`] = `
<DocumentFragment>
  <span
    class="SxCounter SxCounter_type_filled SxCounter_size_large SxCounter_color_warning css-1uoppil-SxCounter-root"
    data-testid="testStyleParams-color-warning"
  >
    99
  </span>
</DocumentFragment>
`;

exports[`Counter size large 1`] = `
<DocumentFragment>
  <span
    class="SxCounter SxCounter_type_filled SxCounter_size_large SxCounter_color_brand css-14y727w-SxCounter-root"
    data-testid="testStyleParams-size-large"
  >
    99
  </span>
</DocumentFragment>
`;

exports[`Counter size medium 1`] = `
<DocumentFragment>
  <span
    class="SxCounter SxCounter_type_filled SxCounter_size_medium SxCounter_color_brand css-1jmdb1s-SxCounter-root"
    data-testid="testStyleParams-size-medium"
  >
    99
  </span>
</DocumentFragment>
`;

exports[`Counter size small 1`] = `
<DocumentFragment>
  <span
    class="SxCounter SxCounter_type_filled SxCounter_size_small SxCounter_color_brand css-1q23jg2-SxCounter-root"
    data-testid="testStyleParams-size-small"
  >
    99
  </span>
</DocumentFragment>
`;

exports[`Counter type filled 1`] = `
<DocumentFragment>
  <span
    class="SxCounter SxCounter_type_filled SxCounter_size_large SxCounter_color_brand css-14y727w-SxCounter-root"
    data-testid="testStyleParams-type-filled"
  >
    99
  </span>
</DocumentFragment>
`;

exports[`Counter type ghosted 1`] = `
<DocumentFragment>
  <span
    class="SxCounter SxCounter_type_ghosted SxCounter_size_large SxCounter_color_brand css-1uf3fr4-SxCounter-root"
    data-testid="testStyleParams-type-ghosted"
  >
    99
  </span>
</DocumentFragment>
`;

exports[`Counter type white 1`] = `
<DocumentFragment>
  <span
    class="SxCounter SxCounter_type_white SxCounter_size_large SxCounter_color_brand css-1letqfp-SxCounter-root"
    data-testid="testStyleParams-type-white"
  >
    99
  </span>
</DocumentFragment>
`;
